# FA2sp_Remastered

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  FAData.ini  MissionEditor.sln  README.md  vcpkg-configuration.json  vcpkg.json
MissionEditor/: AITriggerAddDlg.cpp  AITriggerTypes.cpp  AiTriggerTypesEnable.cpp  All.cpp  Base64.cpp  Basic.cpp  Bitmap2MapConverter.cpp  BitmapImage.h  Blowfish.cpp  Blowfish.h  Buffer.cpp  Buffer.h  Building.cpp  CCFile.cpp  CCFile.h  CRC.cpp  CRC.h  Camera.cpp  Camera.h  CellTag.cpp  CliffModifier.cpp  Convert.cpp  Convert.h  Defines.h  FinalSun.cpp  FinalSun.h  FinalSunDlg.cpp  FinalSunDlg.h  FormatExtensions.h  GameScene.cpp  GameScene.h  GameTexture.cpp  GameTexture.h  GlobalsDlg.cpp  Houses.cpp  ImportINI.cpp  Infantry.cpp  Info.cpp  IniFile.cpp  IniFile.h  (+93 more)
MissionEditor/PropertySheets/: Common.props  Debug.props  Distribution.props  Release.props
MissionEditor/data/FinalSun/: FSData.ini
MissionEditorPackLib/: MissionEditorPackLib.cpp  MissionEditorPackLib.h  MissionEditorPackLib.vcxproj  MissionEditorPackLib.vcxproj.filters
cmake/vcpkg/triplets/: x64-windows-v143.cmake  x86-windows-v143.cmake
include/pack/: MissionEditorPackLib.h  Vec3.h  VoxelNormals.h
lib/: CMakeLists.txt
lib/pack/: CMakeLists.txt  MissionEditorPackLib.cpp  VoxelNormals.cpp
src/editor/: AITriggerAddDlg.cpp  AITriggerAddDlg.h  AITriggerTypes.cpp  AITriggerTypes.h  AiTriggerTypesEnable.cpp  AiTriggerTypesEnable.h  Aircraft.cpp  Aircraft.h  All.cpp  All.h  BackCliffModifier.cpp  BackCliffModifier.h  Basic.cpp  Basic.h  Bitmap2MapConverter.cpp  Bitmap2MapConverter.h  Building.cpp  Building.h  CMakeLists.txt  CellTag.cpp  CellTag.h  ChangeSizeDlg.cpp  ChangeSizeDlg.h  CliffModifier.cpp  CliffModifier.h  ComboUInputDlg.cpp  ComboUInputDlg.h  Defines.h  DownloadSession.cpp  DownloadSession.h  DynamicGraphDlg.cpp  DynamicGraphDlg.h  FinalSun.cpp  FinalSun.h  FinalSunDlg.cpp  FinalSunDlg.h  FloatEdit.cpp  FloatEdit.h  FrontCliffModifier.cpp  FrontCliffModifier.h  (+140 more)
test/: CMakeLists.txt
